--- a/src/shop.html
+++ b/src/shop.html
@@ -20,7 +20,7 @@
             </div>
             <br>
             <div class="section-title">
-                Shoes
+                <h1>Shoes</h1>
             </div>
             <div class="parameters1">
                 Items 1-12 of 36
@@ -34,8 +34,110 @@
             <img src="shop/resources/show.png" alt="show" class="show">
         </nav>
         <section>
-            
+            <div class="parent">
+                <div class="div1">
+                    <img src="shop/resources/prd_03_1.jpg" alt="item" class="item">
+                    <div class="bold">Calvin Klein Logo Sweatpants</div>
+                    <div class="prix">$86.00</div>
+                </div>
+                <div class="div2">
+                    <img src="shop/resources/prd_02_1_2_1.jpg" alt="item" class="item">
+                    <div class="bold">Short Sleeved Hoodie</div>
+                    <img src="shop/resources/star.png" alt="star" class="star">
+                    <img src="shop/resources/star.png" alt="star" class="star">
+                    <img src="shop/resources/star.png" alt="star" class="star">
+                    <img src="shop/resources/star.png" alt="star" class="star">
+                    <img src="shop/resources/star.png" alt="star" class="star"><br>
+                    <div class="prix">$59.00</div><br>
+                    <img src="shop/resources/black.png" alt="black" class="color-choice">
+                    <img src="shop/resources/blue.png" alt="blue" class="color-choice">
+                </div>
+                <div class="div3">
+                    <img src="shop/resources/prd_14_1.jpg" alt="item" class="item">
+                    <div class="bold">Woleen Tee</div>
+                    <div class="prix">$59.00</div>
+                </div>
+                <div class="div4">
+                    <img src="shop/resources/prd_17_1.jpg" alt="item" class="item">
+                    <div class="bold">Brown Jacket</div>
+                    <div class="line" class="prix">$89.00</div><div class="nouveau-prix">$80.00</div> 
+                </div>
+                <div class="div5">
+                    <img src="shop/resources/prd_12_1_4.jpg" alt="item" class="item">
+                    <div class="bold">Pink Leather Watch</div>
+                    <div class="prix">$95.99</div><br>
+                    <img src="shop/resources/letter-m.png" alt="size-m" class="size-choice">
+                </div>
+                <div class="div6">
+                    <img src="shop/resources/prd_01_1_1_1.jpg" alt="item" class="item">
+                    <div class="bold">Cuffed Beanie</div>
+                    <div class="prix">$68.00</div><br>
+                </div>
+                <div class="div7">
+                    <img src="shop/resources/prd_02_1_2_2.jpg" alt="item" class="item">
+                    <div class="bold">Metallic Frame Glasses Trendy</div>
+                    <img src="shop/resources/star.png" alt="star" class="star">
+                    <img src="shop/resources/star.png" alt="star" class="star">
+                    <img src="shop/resources/star.png" alt="star" class="star">
+                    <img src="shop/resources/star.png" alt="star" class="star">
+                    <img src="shop/resources/star.png" alt="star" class="star"><br>
+                    <div class="prix">$60.50</div><br>
+                </div>
+                <div class="div8">
+                    <img src="shop/resources/prd_03_1_1.jpg" alt="item" class="item">
+                    <div class="bold">Flower Designs Blouse</div>
+                    <img src="shop/resources/star.png" alt="star" class="star">
+                    <img src="shop/resources/star.png" alt="star" class="star">
+                    <img src="shop/resources/star.png" alt="star" class="star">
+                    <img src="shop/resources/star.png" alt="star" class="star">
+                    <img src="shop/resources/star.png" alt="star" class="star"><br>
+                    <div class="prix">$89.90</div><br>
+                </div>
+                <div class="div9">
+                    <img src="shop/resources/prd_04_1.jpg" alt="item" class="item">
+                    <div class="bold">Leather Shop Bag</div>
+                    <div class="prix">$59.90</div><br>
+                </div>
+                <div class="div10">
+                    <img src="shop/resources/prd_14_1_2.jpg" alt="item" class="item">
+                    <div class="bold">Denim Jacket</div>
+                    <img src="shop/resources/star.png" alt="star" class="star">
+                    <img src="shop/resources/star.png" alt="star" class="star">
+                    <img src="shop/resources/star.png" alt="star" class="star">
+                    <img src="shop/resources/star.png" alt="star" class="star">
+                    <img src="shop/resources/star.png" alt="star" class="star"><br>
+                    <div class="prix">$45.00</div><br>
+                </div>
+                <div class="div11">
+                    <img src="shop/resources/prd_15_1_1.jpg" alt="item" class="item">
+                    <div class="bold">Hooded Sweatshirt</div>
+                    <div class="prix">$55.00</div><br>
+                </div>
+                <div class="div12">
+                    <img src="shop/resources/prd_16_2.jpg" alt="item" class="item">
+                    <div class="bold">Autumn Coat with Pockets</div>
+                    <div class="prix">$33.00</div><br>
+                </div>
+            </div>
         </section>
+        <section class="page-number">
+            <div class="underline">01</div> 02 03
+            <img src="shop/resources/next.png" alt="next" class="next">
+        </section>
+        <aside>
+            <h2>Shop By</h2>
+            <h3>COLOR</h3>
+            <img src="shop/resources/black.png" alt="black" class="color-choice">
+            Black
+            <img src="shop/resources/blue.png" alt="blue" class="color-choice">
+            Blue
+            <img src="shop/resources/brown.png" alt="brown" class="color-choice">
+            Brown
+            <h3>SIZE</h3>
+            <img src="shop/resources/xs.png" alt="XS" class="size-selector">
+            <img src="shop/resources/s.png" alt="S" class="size-selector">
+            <img src="shop/resources/m.png" alt="M" class="size-selector">
+        </aside>
     </main>
 </body>
 </html>
