--- a/index.html
+++ b/index.html
@@ -6,17 +6,14 @@
     <title>Supro.| dev</title>
     <link rel="stylesheet" href="src/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial scale=1.0">
 </head>
 
 <body>
     <header>
-        <div class="container">
-
-
+        <div class="topnav">
             <nav>
-
-                <div id="logo"><img src="src/homepage/resources/logo_supro_1.png" alt="supro logo"></div>
-
+                <div class="logo"><img src="src/homepage/resources/logo_supro_1.png" alt="supro logo"></div>
                 <ul>
 
                     <li><a href="#">Home</a></li>
@@ -26,17 +23,19 @@
                     <li><a href="#">Blog</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
-                <form action="get" class="search-bar">
-                    <input type="search" placeholder="Start Searching...">
-                </form>
-            </nav>
 
-            <ul class="thumbnail">
-                <a href="#"><img src="src\homepage\thumbnail\person.png" alt=""></a>
-                <a href="#"><img src="src\homepage\thumbnail\heart.png" alt=""></a>
-                <a href="#"><img src="src\homepage\thumbnail\cart.png" alt=""></a>
-                <a href="#"><img src="src\homepage\thumbnail\gear.png" alt=""></a>
-            </ul>
+                <input type="search" placeholder="Start Searching...">
+                <div class="search-bar">
+                </div>
+
+                <div class="icons-socials">
+                    <a href="#"><img src="src\homepage\thumbnail\person-outline.svg" alt=""></a>
+                    <a href="#"><img src="src\homepage\thumbnail\heart-outline.svg" alt=""></a>
+                    <a href="#"><img src="src\homepage\thumbnail\cart-outline.svg" alt=""></a>
+                    <a href="#"><img src="src\homepage\thumbnail\gear-outline.svg" alt=""></a>
+                    <a href="#" id="menu-btn"><img src="src\homepage\thumbnail\open-menu.svg" alt=""></a>
+                </div>
+            </nav>
         </div>
 
     </header>
@@ -116,10 +115,10 @@
                     </ul>
 
                     <div class="box">
-                        <a href="#"><img src="hhttp://placekitten.com/200/300" alt="grey shirt girl"></a>
+                        <a href="#"><img src="http://placekitten.com/200/300" alt="grey shirt girl"></a>
                         <p>Tuk Peacock Shoes</p>
                         <!-- starring here -->
-                        <span>88.00</span>
+                        <span>$88.00</span>
                     </div>
                     <div class="box">
                         <a href="#"><img src="http://placekitten.com/200/300" alt="blue shirt girl"></a>
@@ -212,11 +211,14 @@
             <footer>
                 <div id="logo"><img src="src/homepage/resources/logo_supro_1.png" alt="supro logo"></div>
                 <div class="contact">
-                    <img src="" alt="place marker icon"><p>184 Main Rd R, St Albans<br>VIC 3021, Australia</p>
-                    
-                    <img src="" alt="mail icon"><p>contact@company.com</p>
+                    <img src="" alt="place marker icon">
+                    <p>184 Main Rd R, St Albans<br>VIC 3021, Australia</p>
 
-                    <img src="" alt="phone icon"><p>+001 2233 456</p>
+                    <img src="" alt="mail icon">
+                    <p>contact@company.com</p>
+
+                    <img src="" alt="phone icon">
+                    <p>+001 2233 456</p>
                 </div>
                 <div class="info">
                     <h4>HELP & INFORMATION</h4>
@@ -255,8 +257,8 @@
                         <li><a href="#"><img src="" alt="instagram"></li></a>
                     </ul>
 
-                    
-                    <ul class ="payments">
+
+                    <ul class="payments">
                         <li><img src="" alt="visa icon"></li>
                         <li><img src="" alt="paypal icon"></li>
                         <li><img src="" alt="mastercard icon"></li>
