--- a/src/shop.html
+++ b/src/shop.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,33 +11,33 @@
 
 <body>
     <header>
-        <!--Scott is working on this-->
+        <!--Scott is working on the header-->
     </header>
     <main>
         <nav>
             <div class="root">
-                <span class="grey-text">Home</span> 
+                <span class="grey-text">Home</span>
                 <img src="shop/resources/circle.png" alt="circle" class="circle">
-                <span class="grey-text">Fashion</span> 
+                <span class="grey-text">Fashion</span>
                 <img src="shop/resources/circle.png" alt="circle" class="circle">
                 <span class="black-text">Shoes</span>
             </div>
             <br>
             <span class="title">
-            <span class="section-title">
-                <h1 class="black-text">Shoes</h1>
-            </span>
-            <span class="parameters">
-            <span class="parameters1" class="black-text">
-                Items 1-12 of 36
-            </span>
-            <span class="parameters1" class="black-text">
-                Sort By <span class="grey-text">Position</span>
-            </span>
-            <img src="shop/resources/down-arrow.png" alt="down-arrow" class="down-arrow">
-            <img src="shop/resources/up-arrow.png" alt="up-arrow" class="up-arrow">
-            <img src="shop/resources/menu.png" alt="menu" class="menu">
-            <img src="shop/resources/show.png" alt="show" class="show">
+                <span class="section-title">
+                    <h1 class="black-text">Shoes</h1>
+                </span>
+                <span class="parameters">
+                    <span class="parameters1" class="black-text">
+                        Items 1-12 of 36
+                    </span>
+                    <span class="parameters1" class="black-text">
+                        Sort By <span class="grey-text">Position</span>
+                        <img src="shop/resources/down-arrow.png" alt="down-arrow" class="down-arrow">
+                        <img src="shop/resources/up-arrow.png" alt="up-arrow" class="up-arrow">
+                        <img src="shop/resources/menu.png" alt="menu" class="menu">
+                        <img src="shop/resources/show.png" alt="show" class="show">
+                    </span>
         </nav>
         <section class="grid">
             <div class="parent">
@@ -65,8 +66,8 @@
                 <div class="div4">
                     <img src="shop/resources/prd_17_1.jpg" alt="item" class="item">
                     <div class="bold">Brown Jacket</div>
-                    <div class="line" class="prix">$89.00</div>
-                    <div class="nouveau-prix">$80.00</div> 
+                    <span class="line" class="prix">$89.00</span>
+                    <span class="nouveau-prix">$80.00</span>
                 </div>
                 <div class="div5">
                     <img src="shop/resources/prd_12_1_4.jpg" alt="item" class="item">
@@ -134,30 +135,31 @@
             <h2>Shop By</h2>
             <h3>COLOR</h3>
             <img src="shop/resources/black.png" alt="black" class="color">
-            Black
+            <span class="grey-text">Black</span> <br>
             <img src="shop/resources/blue.png" alt="blue" class="color">
-            Blue
+            <span class="grey-text">Blue</span> <br>
             <img src="shop/resources/brown.png" alt="brown" class="color">
-            Brown
+            <span class="grey-text">Brown</span> <br>
             <h3>SIZE</h3>
             <img src="shop/resources/xs.png" alt="XS" class="size-selector">
             <img src="shop/resources/s.png" alt="S" class="size-selector">
             <img src="shop/resources/m.png" alt="M" class="size-selector">
             <h3>PRICE</h3>
-            <div>$29 - $95.99</div>
+            <div class="grey-text">$29 - $95.99</div>
             <progress id="prix" max="100" value="100"> 100% </progress>
             <h3>BRAND</h3>
             <div>Creative
-            <input type="checkbox" checked="checked">
-            <span class="checkmark"></span>
+                <input type="checkbox" checked="checked">
+                <span class="checkmark"></span>
             </div>
             <div>Wellness
-            <input type="checkbox">
-            <span class="checkmark"></span>
+                <input type="checkbox">
+                <span class="checkmark"></span>
             </div>
             <h2>Compare products</h2>
             <span class="grey-text">You have no items to compare.</span>
         </aside>
     </main>
 </body>
+
 </html>
