--- a/pruduct.html
+++ b/pruduct.html
@@ -34,10 +34,18 @@
                     </div>
                     <div class="review">
 
-                        <p>1 Review</p>
+                        <p> 
+                            <!--&#x1F31F; &#x1F31F; &#x1F31F; &#x1F31F;	&#x2729;-->   
+                            <img src="src/product/resources/Fstar.png" alt="full star">
+                            <img src="src/product/resources/Fstar.png" alt="full star">
+                            <img src="src/product/resources/Fstar.png" alt="full star">
+                            <img src="src/product/resources/Fstar.png" alt="full star">
+                            <img src="src/product/resources/Estar.png" alt="empty star">
+                            1 Review 
+                        </p>
                         <p>mango Women's bag</p>
                         <p>SKU:AB1609456789</p>
-                        <p>£95.90 £119.90</p>
+                        <p>£95.90 <span>£119.90</span></p>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                             Ex sequi non nihil voluptatibus officiis animi soluta
                         </p>
@@ -146,7 +154,7 @@
                         <img src="src/product/resources/prd_15_1.jpg" alt="prd_15">
                         <figcaption>
                             <p>contton sweater</p>
-                            <p>$58.50 $55.00</p>
+                            <p><span>$58.50</span> $55.00</p>
                         </figcaption>
                     </figure>
                     <figure>
@@ -160,7 +168,7 @@
                         <img src="src/product/resources/prd_17_1_1.jpg" alt="prd_17">
                         <figcaption>
                             <p>Embroidered flowy jacket</p>
-                            <p>$37.00 $35.00</p>
+                            <p><span>$37.00</span> $35.00</p>
                         </figcaption>
                     </figure>
                     <figure>
@@ -184,7 +192,7 @@
                         <img src="src/product/resources/prd_09_1_1_4.jpg" alt="prd_09">
                         <figcaption>
                             <p>oversize flecked sweater</p>
-                            <p>$68.00 $52.00</p>
+                            <p><span>$68.00</span> $52.00</p>
                         </figcaption>
                     </figure>
                     <figure>
