clean css exept aside

--- a/src/shop.html
+++ b/src/shop.html
@@ -28,10 +28,10 @@
                     <h1 class="black-text">Shoes</h1>
                 </span>
                 <span class="parameters">
-                    <span class="parameters1" class="black-text">
+                    <span class="parameters1" class="black-text" class="bold">
                         Items 1-12 of 36
                     </span>
-                    <span class="parameters1" class="black-text">
+                    <span class="parameters1" class="black-text" class="bold">
                         Sort By <span class="grey-text">Position</span>
                         <img src="shop/resources/down-arrow.png" alt="down-arrow" class="down-arrow">
                         <img src="shop/resources/up-arrow.png" alt="up-arrow" class="up-arrow">
@@ -131,6 +131,7 @@
             <div class="underline">01</div> 02 03
             <img src="shop/resources/next.png" alt="next" class="next">
         </section>
+    </main>
         <aside>
             <h2>Shop By</h2>
             <h3>COLOR</h3>
@@ -159,7 +160,6 @@
             <h2>Compare products</h2>
             <span class="grey-text">You have no items to compare.</span>
         </aside>
-    </main>
 </body>
 
 </html>
