working on hamburger + menu

--- a/index.html
+++ b/index.html
@@ -33,13 +33,15 @@
           <li class="header__icon"><i class="fa fa-user fa-lg" aria-hidden="true"></i></li>
           <li class="header__icon"><i class="fa fa-heart fa-lg" aria-hidden="true"></i></li>
           <li class="header__icon"><i class="fa fa-shopping-cart fa-lg" aria-hidden="true"></i></li>
-          <li class="header__icon header__icon--menu"><i class="fa fa-bars fa-lg" aria-hidden="true"></i></li>
+          <li class="header__icon"><i class="fas fa-cog fa-lg" aria-hidden="true"></i></li>
+          <li class="header__icon header__icon--menu">
+            <input type="checkbox" class="header__toggler">
+            <div class="hamburger"><div></div></div>
+          </li>
         </ul>
       </aside>
     </header>
   </div>
-
 </body>
 <script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
-
 </html>
