html/css done -> responsive

--- a/src/shop.html
+++ b/src/shop.html
@@ -13,126 +13,117 @@
     <header>
         <!--Scott is working on the header-->
     </header>
-    <main>
-        <nav>
-            <div class="root">
-                <span class="grey-text">Home</span>
-                <img src="shop/resources/circle.png" alt="circle" class="circle">
-                <span class="grey-text">Fashion</span>
-                <img src="shop/resources/circle.png" alt="circle" class="circle">
-                <span class="black-text">Shoes</span>
+    <nav>
+        <div class="root">
+            <span class="grey-text">Home</span>
+            <img src="shop/resources/circle.png" alt="circle" class="circle">
+            <span class="grey-text">Fashion</span>
+            <img src="shop/resources/circle.png" alt="circle" class="circle">
+            <span class="black-text">Shoes</span>
+        </div>
+        <br>
+        <h1 class="black-text section-title title">Shoes</h1>
+        <span class="parameters">
+            <span class="parameters1 black-text bold">
+                Items 1-12 of 36
+            </span>
+            <span class="parameters1 black-text bold">
+                Sort By <span class="grey-text">Position</span>
+                <img src="shop/resources/down-arrow.png" alt="down-arrow" class="down-arrow">
+                <img src="shop/resources/up-arrow.png" alt="up-arrow" class="up-arrow">
+                <img src="shop/resources/menu.png" alt="menu" class="menu">
+                <img src="shop/resources/show.png" alt="show" class="show">
+            </span>
+        </span>
+    </nav>
+    <section class="grid">
+        <div class="parent">
+            <div class="div1">
+                <img src="shop/resources/prd_03_1.jpg" alt="item" class="item">
+                <div class="bold">Calvin Klein Logo Sweatpants</div>
+                <div class="prix">$86.00</div>
             </div>
-            <br>
-            <span class="title">
-                <span class="section-title">
-                    <h1 class="black-text">Shoes</h1>
-                </span>
-                <span class="parameters">
-                    <span class="parameters1" class="black-text" class="bold">
-                        Items 1-12 of 36
-                    </span>
-                    <span class="parameters1" class="black-text" class="bold">
-                        Sort By <span class="grey-text">Position</span>
-                        <img src="shop/resources/down-arrow.png" alt="down-arrow" class="down-arrow">
-                        <img src="shop/resources/up-arrow.png" alt="up-arrow" class="up-arrow">
-                        <img src="shop/resources/menu.png" alt="menu" class="menu">
-                        <img src="shop/resources/show.png" alt="show" class="show">
-                    </span>
-        </nav>
-        <section class="grid">
-            <div class="parent">
-                <div class="div1">
-                    <img src="shop/resources/prd_03_1.jpg" alt="item" class="item">
-                    <div class="bold">Calvin Klein Logo Sweatpants</div>
-                    <div class="prix">$86.00</div>
-                </div>
-                <div class="div2">
-                    <img src="shop/resources/prd_02_1_2_1.jpg" alt="item" class="item">
-                    <div class="bold">Short Sleeved Hoodie</div>
-                    <img src="shop/resources/star.png" alt="star" class="star">
-                    <img src="shop/resources/star.png" alt="star" class="star">
-                    <img src="shop/resources/star.png" alt="star" class="star">
-                    <img src="shop/resources/star.png" alt="star" class="star">
-                    <img src="shop/resources/star.png" alt="star" class="star"><br>
-                    <div class="prix">$59.00</div><br>
-                    <img src="shop/resources/black.png" alt="black" class="color-choice">
-                    <img src="shop/resources/blue.png" alt="blue" class="color-choice">
-                </div>
-                <div class="div3">
-                    <img src="shop/resources/prd_14_1.jpg" alt="item" class="item">
-                    <div class="bold">Woleen Tee</div>
-                    <div class="prix">$59.00</div>
-                </div>
-                <div class="div4">
-                    <img src="shop/resources/prd_17_1.jpg" alt="item" class="item">
-                    <div class="bold">Brown Jacket</div>
-                    <span class="line" class="prix">$89.00</span>
-                    <span class="nouveau-prix">$80.00</span>
-                </div>
-                <div class="div5">
-                    <img src="shop/resources/prd_12_1_4.jpg" alt="item" class="item">
-                    <div class="bold">Pink Leather Watch</div>
-                    <div class="prix">$95.99</div><br>
-                    <img src="shop/resources/letter-m.png" alt="size-m" class="size-choice">
-                </div>
-                <div class="div6">
-                    <img src="shop/resources/prd_01_1_1_1.jpg" alt="item" class="item">
-                    <div class="bold">Cuffed Beanie</div>
-                    <div class="prix">$68.00</div><br>
-                </div>
-                <div class="div7">
-                    <img src="shop/resources/prd_02_1_2_2.jpg" alt="item" class="item">
-                    <div class="bold">Metallic Frame Glasses Trendy</div>
-                    <img src="shop/resources/star.png" alt="star" class="star">
-                    <img src="shop/resources/star.png" alt="star" class="star">
-                    <img src="shop/resources/star.png" alt="star" class="star">
-                    <img src="shop/resources/star.png" alt="star" class="star">
-                    <img src="shop/resources/star.png" alt="star" class="star"><br>
-                    <div class="prix">$60.50</div><br>
-                </div>
-                <div class="div8">
-                    <img src="shop/resources/prd_03_1_1.jpg" alt="item" class="item">
-                    <div class="bold">Flower Designs Blouse</div>
-                    <img src="shop/resources/star.png" alt="star" class="star">
-                    <img src="shop/resources/star.png" alt="star" class="star">
-                    <img src="shop/resources/star.png" alt="star" class="star">
-                    <img src="shop/resources/star.png" alt="star" class="star">
-                    <img src="shop/resources/star.png" alt="star" class="star"><br>
-                    <div class="prix">$89.90</div><br>
-                </div>
-                <div class="div9">
-                    <img src="shop/resources/prd_04_1.jpg" alt="item" class="item">
-                    <div class="bold">Leather Shop Bag</div>
-                    <div class="prix">$59.90</div><br>
-                </div>
-                <div class="div10">
-                    <img src="shop/resources/prd_14_1_2.jpg" alt="item" class="item">
-                    <div class="bold">Denim Jacket</div>
-                    <img src="shop/resources/star.png" alt="star" class="star">
-                    <img src="shop/resources/star.png" alt="star" class="star">
-                    <img src="shop/resources/star.png" alt="star" class="star">
-                    <img src="shop/resources/star.png" alt="star" class="star">
-                    <img src="shop/resources/star.png" alt="star" class="star"><br>
-                    <div class="prix">$45.00</div><br>
-                </div>
-                <div class="div11">
-                    <img src="shop/resources/prd_15_1_1.jpg" alt="item" class="item">
-                    <div class="bold">Hooded Sweatshirt</div>
-                    <div class="prix">$55.00</div><br>
-                </div>
-                <div class="div12">
-                    <img src="shop/resources/prd_16_2.jpg" alt="item" class="item">
-                    <div class="bold">Autumn Coat with Pockets</div>
-                    <div class="prix">$33.00</div><br>
-                </div>
+            <div class="div2">
+                <img src="shop/resources/prd_02_1_2_1.jpg" alt="item" class="item">
+                <div class="bold">Short Sleeved Hoodie</div>
+                <img src="shop/resources/star.png" alt="star" class="star">
+                <img src="shop/resources/star.png" alt="star" class="star">
+                <img src="shop/resources/star.png" alt="star" class="star">
+                <img src="shop/resources/star.png" alt="star" class="star">
+                <img src="shop/resources/star.png" alt="star" class="star"><br>
+                <div class="prix">$59.00</div><br>
+                <img src="shop/resources/black.png" alt="black" class="color-choice">
+                <img src="shop/resources/blue.png" alt="blue" class="color-choice">
             </div>
-        </section>
-        <section class="page-number">
-            <div class="underline">01</div> 02 03
-            <img src="shop/resources/next.png" alt="next" class="next">
-        </section>
-    </main>
-        <aside>
+            <div class="div3">
+                <img src="shop/resources/prd_14_1.jpg" alt="item" class="item">
+                <div class="bold">Woleen Tee</div>
+                <div class="prix">$59.00</div>
+            </div>
+            <div class="div4">
+                <img src="shop/resources/prd_17_1.jpg" alt="item" class="item">
+                <div class="bold">Brown Jacket</div>
+                <span class="line prix">$89.00</span>
+                <span class="nouveau-prix">$80.00</span>
+            </div>
+            <div class="div5">
+                <img src="shop/resources/prd_12_1_4.jpg" alt="item" class="item">
+                <div class="bold">Pink Leather Watch</div>
+                <div class="prix">$95.99</div><br>
+                <img src="shop/resources/letter-m.png" alt="size-m" class="size-choice">
+            </div>
+            <div class="div6">
+                <img src="shop/resources/prd_01_1_1_1.jpg" alt="item" class="item">
+                <div class="bold">Cuffed Beanie</div>
+                <div class="prix">$68.00</div><br>
+            </div>
+            <div class="div7">
+                <img src="shop/resources/prd_02_1_2_2.jpg" alt="item" class="item">
+                <div class="bold">Metallic Frame Glasses Trendy</div>
+                <img src="shop/resources/star.png" alt="star" class="star">
+                <img src="shop/resources/star.png" alt="star" class="star">
+                <img src="shop/resources/star.png" alt="star" class="star">
+                <img src="shop/resources/star.png" alt="star" class="star">
+                <img src="shop/resources/star.png" alt="star" class="star"><br>
+                <div class="prix">$60.50</div><br>
+            </div>
+            <div class="div8">
+                <img src="shop/resources/prd_03_1_1.jpg" alt="item" class="item">
+                <div class="bold">Flower Designs Blouse</div>
+                <img src="shop/resources/star.png" alt="star" class="star">
+                <img src="shop/resources/star.png" alt="star" class="star">
+                <img src="shop/resources/star.png" alt="star" class="star">
+                <img src="shop/resources/star.png" alt="star" class="star">
+                <img src="shop/resources/star.png" alt="star" class="star"><br>
+                <div class="prix">$89.90</div><br>
+            </div>
+            <div class="div9">
+                <img src="shop/resources/prd_04_1.jpg" alt="item" class="item">
+                <div class="bold">Leather Shop Bag</div>
+                <div class="prix">$59.90</div><br>
+            </div>
+            <div class="div10">
+                <img src="shop/resources/prd_14_1_2.jpg" alt="item" class="item">
+                <div class="bold">Denim Jacket</div>
+                <img src="shop/resources/star.png" alt="star" class="star">
+                <img src="shop/resources/star.png" alt="star" class="star">
+                <img src="shop/resources/star.png" alt="star" class="star">
+                <img src="shop/resources/star.png" alt="star" class="star">
+                <img src="shop/resources/star.png" alt="star" class="star"><br>
+                <div class="prix">$45.00</div><br>
+            </div>
+            <div class="div11">
+                <img src="shop/resources/prd_15_1_1.jpg" alt="item" class="item">
+                <div class="bold">Hooded Sweatshirt</div>
+                <div class="prix">$55.00</div><br>
+            </div>
+            <div class="div12">
+                <img src="shop/resources/prd_16_2.jpg" alt="item" class="item">
+                <div class="bold">Autumn Coat with Pockets</div>
+                <div class="prix">$33.00</div><br>
+            </div>
+        </div>
+        <aside class="aside">
             <h2>Shop By</h2>
             <h3>COLOR</h3>
             <img src="shop/resources/black.png" alt="black" class="color">
@@ -157,9 +148,14 @@
                 <input type="checkbox">
                 <span class="checkmark"></span>
             </div>
-            <h2>Compare products</h2>
+            <h3>Compare products</h3>
             <span class="grey-text">You have no items to compare.</span>
         </aside>
+    </section>
+    <section class="page-number">
+        <span class="underline black-text">01</span><span class="black-text"> 02 03</span>
+        <img src="shop/resources/next.png" alt="next" class="next">
+    </section>
 </body>
 
 </html>
