--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 
         <nav class="header__nav collapse navbar-collapse" id="">
           <ul class="header__list navbar-nav mr-auto">
-            <li class="header__item nav-item active"><a href="#">Home</a></li>
-            <li class="header__item nav-item active"><a href="#">Shop</a></li>
-            <li class="header__item nav-item active"><a href="#">Product</a></li>
-            <li class="header__item nav-item active"><a href="#">Pages</a></li>
-            <li class="header__item nav-item active"><a href="#">Blog</a></li>
-            <li class="header__item nav-item active"><a href="#">Contact</a></li>
+            <li class="header__item nav-item"><a href="#">Home</a></li>
+            <li class="header__item nav-item"><a href="#">Shop</a></li>
+            <li class="header__item nav-item"><a href="#">Product</a></li>
+            <li class="header__item nav-item"><a href="#">Pages</a></li>
+            <li class="header__item nav-item"><a href="#">Blog</a></li>
+            <li class="header__item nav-item"><a href="#">Contact</a></li>
           </ul>
         </nav>
 
@@ -37,6 +37,24 @@
             <li class="header__icon header__icon--menuwrap">
               <input type="checkbox" class="header__icon header__icon--menuwrap--toggler">
               <div class="header__icon header__icon--menuwrap--hamburger"><div></div></div>
+              <div class="header__icon header__icon--menuwrap--menu">
+                <div>
+                  <div>
+                    <ul>
+                      <li><a href="#">Home</a></li>
+                      <li><a href="#">Shop</a></li>
+                      <li><a href="#">Product</a></li>
+                      <li><a href="#">Pages</a></li>
+                      <li><a href="#">Blog</a></li>
+                      <li><a href="#">Contact</a></li>
+                      <div class="info">
+                        <h1>Contact Us</h1>
+                        <p>69 Halsey St, Ny 10002, New York,<br>United States support.center@unero.co<br>(0091)8547632521</p>
+                      </div>
+                    </ul>
+                  </div>
+                </div>
+              </div>
             </li>
           </ul>
           
