debute responsive mobile

--- a/pruduct.html
+++ b/pruduct.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="initial-scale=1" />
     <link rel="stylesheet" href="src/css/style.css">
     <title>Single product</title>
 </head>
@@ -34,16 +34,16 @@
                     </div>
                     <div class="review">
 
-                        <p> 
-                            <!--&#x1F31F; &#x1F31F; &#x1F31F; &#x1F31F;	&#x2729;-->   
+                        <p>
+                            <!--&#x1F31F; &#x1F31F; &#x1F31F; &#x1F31F;	&#x2729;-->
                             <img src="src/product/resources/Fstar.png" alt="full star">
                             <img src="src/product/resources/Fstar.png" alt="full star">
                             <img src="src/product/resources/Fstar.png" alt="full star">
                             <img src="src/product/resources/Fstar.png" alt="full star">
                             <img src="src/product/resources/Estar.png" alt="empty star">
-                            1 Review 
+                            1 Review
                         </p>
-                        <p>mango Women's bag</p>
+                        <h2>mango women's bag</h2>
                         <p>SKU:AB1609456789</p>
                         <p>£95.90 <span>£119.90</span></p>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
@@ -76,10 +76,13 @@
                             </ul>
 
                         </div>
+                        <p>
+                            <button>add to cart</button>
+                            <button><i class="far fa-heart"></i></button>
+                        </p>
 
-                        <p>add to cart</p>
                         <!--LIEN-->
-                        <p>buy now</p>
+                        <button>buy now</button>
                         <p>category</p>
                         <p>tags</p>
 
@@ -87,32 +90,27 @@
                             <p>media icons</p>
                             <ul>
                                 <li class="facebook">
-                                    <img src="src/product/resources/facebook-white.svg" alt="facebook">
+                                    <i class="fab fa-facebook-f"></i>
                                 </li>
                                 <li class="twitter">
-                                    <img src="src/product/resources/twitter-white.svg" alt="twitter">
+                                    <i class="fab fa-twitter"></i>
                                 </li>
                                 <li class="pinterest">
-                                    <img src="src/product/resources/pinterest-white.svg" alt="pinterest">
+                                    <i class="fab fa-pinterest"></i>
                                 </li>
                             </ul>
-
-
                         </div>
-
                     </div>
-
             </section>
 
             <section>
                 <div class="description">
                     <ul>
-                        <li href="#">description</li>
-                        <li href="#">more information</li>
-                        <li href="#">review</li>
+                        <li class="desc">description</li>
+                        <li class="more">more information</li>
+                        <li class="revi">review</li>
                     </ul>
                 </div>
-
             </section>
 
             <section>
@@ -142,7 +140,6 @@
                         <img src="src/product/resources/prd_description.jpg" alt="RedShoes">
                     </div>
                 </div>
-
             </section>
 
             <section>
@@ -178,11 +175,8 @@
                             <p>$30.00</p>
                         </figcaption>
                     </figure>
-
                 </div>
-
             </section>
-
 
             <section>
                 <h2>upsell products</h2>
@@ -216,7 +210,6 @@
                             <p>$67.00</p>
                         </figcaption>
                     </figure>
-
                 </div>
 
             </section>
@@ -229,5 +222,6 @@
 
     </footer>
 </body>
+<script defer src="https:use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
 
 </html>
