--- a/index.html
+++ b/index.html
@@ -60,6 +60,70 @@
           
         </aside>
       </header>
+
+
+      <footer class="footer">
+        <div class="up">
+          <div class="footer__contact">
+            <ul >           
+              <img src="src/img/logo.png" alt="">
+              <li><p><i class="fas fa-map-marker-alt"></i> 184 Main Rd E, St Albans<br>VIC 3021, Australia</p></li>
+              <li><p><i class="fas fa-envelope"></i> contact@company.com</p></li>
+              <li><p><i class="fas fa-phone reverse"></i> +001 2233 456</p></li>
+            </ul>
+          </div>
+
+          <div class="footer__list footer__list--help div2">
+            <h3>HELP & INFORMATION</h3>
+            <ul>
+              <li>Track order</li>
+              <li>Premier delivery</li>
+              <li>Student Discount</li>
+            </ul>
+          </div>
+          <div class="footer__list footer__list--about div3">
+            <h3>ABOUT SUPRO</h3>
+            <ul>
+              <li>About us</li>
+              <li>Careers</li>
+              <li>Corporate</li>
+              <li>Investors</li>
+            </ul>
+          </div>
+          <div class="footer__list footer__list--shop div4">
+            <h3>ONLINE SHOP</h3>
+            <ul>
+              <li>Shoes</li>
+              <li>Bags</li>
+              <li>Belts</li>
+            </ul>
+          </div>
+       </div>
+        <div class="down">
+          <div class="footer__icon footer__icon--socials down"> 
+            <div><p>	&copy;2018 <b>Supro.</b> All rights reserved.</p></div>
+            <div>
+            <ul>
+              <li></li>
+              <li><a href="#"><i class="fab fa-facebook-f fa-lg"></i></a></li>
+              <li><a href="#"><i class="fab fa-twitter fa-lg"></i></a></li>
+              <li><a href="#"><i class="fab fa-google-plus-g fa-lg"></i></a></li>
+              <li><a href="#"><i class="fab fa-pinterest-p fa-lg"></i></a></li>
+              <li><a href="#"><i class="fab fa-instagram fa-lg"></i></a></li>
+            </ul>
+          </div>
+          <div>
+            <ul>
+              <li><i class="fab fa-cc-visa fa-lg"></i></li>
+              <li><i class="fab fa-cc-paypal fa-lg"></i></li>
+              <li><i class="fab fa-cc-mastercard fa-lg"></i></li>
+              <li><i class="fab fa-cc-discover fa-lg"></i></li>
+              <li><i class="fab fa-cc-amex fa-lg"></i></li>
+            </ul>
+          </div>
+       </div>
+        </div>
+      </footer>
     </div>
   </body>
 <script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
