bug fixes, see readme.me

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link rel="stylesheet" href="src/css/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet">
+
   <title>Document</title>
 </head>
 
@@ -64,10 +67,18 @@
       </aside>
     </header>
 
+    <main>
+      <h1>This is an H1</h1>
+      <h2>Keep Connected</h2>
+      <h3>This is an H3</h3>
+
+    </main>
+
 
     <footer class="footer">
-      <div class="up">
-        <div class="footer__contact nonephone">
+
+      <div class="up footer__listwrap">
+        <div class="footer__list footer__contact nonephone">
           <ul>
             <img src="src/img/logo.png" alt="">
             <li>
@@ -90,6 +101,7 @@
             <li>Student Discount</li>
           </ul>
         </div>
+
         <div class="footer__list footer__list--about right">
           <h3>ABOUT SUPRO</h3>
           <ul>
@@ -131,13 +143,17 @@
             <option value="chinese yen">CNY</option>
           </select>
         </div>
-        <div class="down">
-        <div class="footer__icon footer__icon--socials down">
-           <div>
-            <p> &copy;2018 <b>Supro.</b> All rights reserved<br><a class="nonedesk">Privacy Policy</a> <a
-                class="nonedesk">Terme of Use</a></p>
-          </div>
-        <div class="nonephone">
+      </div>
+
+
+
+      <div class="footer__icon down">
+        <div>
+          <p> &copy;2018 <b>Supro.</b> All rights reserved<br><a class="nonedesk">Privacy Policy</a> <a
+              class="nonedesk">Terme of Use</a></p>
+        </div>
+
+        <div class="nonephone" alt="socials">
           <ul>
             <li></li>
             <li><a href="#"><i class="fab fa-facebook-f fa-lg"></i></a></li>
@@ -146,8 +162,9 @@
             <li><a href="#"><i class="fab fa-pinterest-p fa-lg"></i></a></li>
             <li><a href="#"><i class="fab fa-instagram fa-lg"></i></a></li>
           </ul>
-       </div>
-        <div class="nonephone">
+        </div>
+
+        <div class="nonephone" alt="payements">
           <ul>
             <li><i class="fab fa-cc-visa fa-lg"></i></li>
             <li><i class="fab fa-cc-paypal fa-lg"></i></li>
@@ -155,7 +172,7 @@
             <li><i class="fab fa-cc-discover fa-lg"></i></li>
             <li><i class="fab fa-cc-amex fa-lg"></i></li>
           </ul>
-      </div>
+        </div>
       </div>
     </footer>
   </div>
