--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 </head>
 
 <body>
-  <div id="app">
     <header class="header">
 
       <a href="#" class="header__logo"><img src="src/img/logo.png" alt=""></a>
@@ -67,10 +66,32 @@
       </aside>
     </header>
 
-    <main>
-      <h1>This is an H1</h1>
-      <h2>Keep Connected</h2>
-      <h3>This is an H3</h3>
+    <main class="main">
+      <div class="main__banner">
+        <div class="main__banner__top--container">
+        <div class="nonephone" alt="socials">
+          <ul>
+            <li></li>
+            <li><a href="#"><i class="fab fa-facebook-f fa-lg"></i></a></li>
+            <li><a href="#"><i class="fab fa-twitter fa-lg"></i></a></li>
+            <li><a href="#"><i class="fab fa-google-plus-g fa-lg"></i></a></li>
+            <li><a href="#"><i class="fab fa-pinterest-p fa-lg"></i></a></li>
+          </ul>
+
+          </div>
+        </div>
+      </div>
+
+      <div class="main__banner">
+        <div class="main__banner__bottom--container">
+        <img src="src//resources/deals_image.jpg" alt=""><div class="main__banner__bottom--container--wrapper">
+            <p>Deal of the day</p>
+            <h2>Hobo Shopper Bag</h2>
+            <p>$79.90  $29.90</p>
+          </div>
+
+        </div>
+      </div>
 
     </main>
 
@@ -175,7 +196,6 @@
         </div>
       </div>
     </footer>
-  </div>
 </body>
 <script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
 
