--- a/pruduct.html
+++ b/pruduct.html
@@ -76,15 +76,19 @@
                             </ul>
 
                         </div>
-                        <p>
-                            <button>add to cart</button>
-                            <button><i class="far fa-heart"></i></button>
-                        </p>
-
-                        <!--LIEN-->
-                        <button>buy now</button>
-                        <p>category</p>
-                        <p>tags</p>
+                        <div class="buying">
+                            <div class="cart">
+                                <p>
+                                    <button class="add">add to cart</button>
+                                    <button><i class="far fa-heart"></i></button>
+                                </p>
+                            </div>
+                            <div class="buy">
+                                <button>buy now</button>
+                                <p>category</p>
+                                <p>tags</p>
+                            </div>
+                        </div>
 
                         <div class="media-icons">
                             <p>media icons</p>
