--- a/pruduct.html
+++ b/pruduct.html
@@ -78,16 +78,19 @@
                         </div>
                         <div class="buying">
                             <div class="cart">
-                                <p>
-                                    <button class="add">add to cart</button>
-                                    <button><i class="far fa-heart"></i></button>
-                                </p>
+                                <button class="add">add to cart</button>
+                                <button><i class="far fa-heart"></i></button>
                             </div>
                             <div class="buy">
                                 <button>buy now</button>
-                                <p>category</p>
-                                <p>tags</p>
+                            </div class="category">
+                            <div>
+                                <p>category :<em></em></p>
                             </div>
+                            <div class="tags">
+                                <p>tags: <em></em></p>
+                            </div>
+
                         </div>
 
                         <div class="media-icons">
