debut html store page

--- a/pruduct.html
+++ b/pruduct.html
@@ -18,6 +18,8 @@
         <article>
 
             <section>
+                <div class="home"><span>home</span> . glitter decorate shoes adasdi</div>
+            
                 <div class="grid-container">
                     <div class="image">
                         <div class="imageG">
@@ -78,6 +80,7 @@
                         </div>
                         <div class="buying">
                             <div class="cart">
+                                <input class="number" type="number" step="1" value="1" min="0">
                                 <button class="add">add to cart</button>
                                 <button><i class="far fa-heart"></i></button>
                             </div>
