amost half css desktop

--- a/stores.html
+++ b/stores.html
@@ -15,15 +15,15 @@
     <div class="border">
         store locator
     </div>
-    <main>
 
+    <main>
 
         <article>
 
             <section>
 
                 <div class="grid-container">
-                    <form>
+                    <form class="area">
                         <fieldset>
                             <legend>search by area</legend>
 
@@ -52,7 +52,7 @@
                     </form>
 
 
-                    <form>
+                    <form class="distance">
                         <fieldset>
                             <legend>search by distance</legend>
                             <label>Location</label><br />
@@ -70,7 +70,70 @@
 
             <section>
                 <div class="grid-container-2">
+                    <div class="leftList">
+                        <!--
+                    heigth
+                    overflow
+                -->
 
+                        <div class="box">
+                            <p class="image">
+                                <img src="src/stores/resources/2c558fd397fc98b43c893a15524037a1_1.jpeg" alt="panda"></p>
+
+                            <p class="presentation">
+                            <h2>Panda</h2>
+                            <p class="adress">
+                                991 Broadway,New York,
+                                New York, Zip Code:
+                                10006, AS
+                            </p>
+                            <p class="phone">Phone 1-541-754-3010</p>
+                            <input type="submit" value="view map" />
+                            </p>
+                        </div>
+
+
+                        <div class="box">
+                            <p class="image">
+                                <img class="img" src="src/stores/resources/64e3011babb9cb666c04621c00230857.jpg" alt="curabitur">
+                            </p>
+                            <p class="presentation">
+                            <h2>Curabitur</h2>
+                            <p class="adress">
+                                69 Mott St,New York,
+                                New York, Zip Code:
+                                10006, AS
+                            </p>
+                            <p class="phone">Phone 1-541-754-3010</p>
+                            <input type="submit" value="view map" /></p>
+                        </div>
+
+
+                        <div class="box">
+                            <p class="image">
+                                <img src="src/stores/resources/9423947432_175211195f_b.jpg" alt="Tandem-C">
+                            </p>
+                            <p class="presentation">
+                            <h2>Tandem-C</h2>
+                            <p class="adress">
+                                9i Broadway,New York,
+                                New York, Zip Code:
+                                10006, AS
+                            </p>
+                            </p>
+                            <p class="phone">Phone 1-541-754-3010</p>
+                            <input type="submit" value="view map" />
+                        </div>
+
+
+
+
+                    </div>
+                    <div class="map">
+
+
+                        MAP
+                    </div>
 
 
                 </div>
