amost css done desktop stores page

--- a/stores.html
+++ b/stores.html
@@ -95,7 +95,8 @@
 
                         <div class="box">
                             <p class="image">
-                                <img class="img" src="src/stores/resources/64e3011babb9cb666c04621c00230857.jpg" alt="curabitur">
+                                <img class="img" src="src/stores/resources/64e3011babb9cb666c04621c00230857.jpg"
+                                    alt="curabitur">
                             </p>
                             <p class="presentation">
                             <h2>Curabitur</h2>
@@ -130,9 +131,9 @@
 
                     </div>
                     <div class="map">
-
-
-                        MAP
+                        <p class="ImgMap">
+<img src="src/stores/resources/kobu-agency-UD7pyCkdBg8-unsplash.jpg" alt="map">
+                        </p>
                     </div>
 
 
